<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">IT_IN_POCKET</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="welcome">Welcome to the app of Computers</string>
    <string name="button1">Introduction </string>
    <string name="button2">Hardware </string>
    <string name="button3">O.S. </string>
    <string name="button4">Cloud </string>
    <string name="button6">Android </string>
    <string name="button8">Internet </string>
    <string name="hello">Computer Basics-----</string>
    <string name="hello1">  Are you new to using computers?
    Do you wonder what people mean when they say the cloud, Windows, ISP, or app?
    Perhaps you just want to know more about how computers work.
    When it comes to learning today\'s technology,
    our Computer Basics tutorial has all of the basic concepts covered.</string>
    <string name="hello2"> Click the buttons below to explore more about computers..!!</string>
    <string name="Intro">What is a computer?</string>
    <string name="Intro1">A computer is an electronic device that manipulates information, or data. It has the ability to store, retrieve,
    and process data. You probably already know that you can use a computer to type documents, send email, play games,
    and browse the Web. You can also use it to edit or create  spreadsheets, presentations, and even videos.</string>
    <string name="Intro2">Hardware vs. software</string>
    <string name="Intro3">Before we talk about different types of computers,let\'s talk about two things all computers have in common: hardware
         and software.
     Hardware is any part of your computer that has a physical structure, such as the keyboard or mouse.
     It also includes all of the computer\'s internal parts.</string>
    <string name="Intro4">Software is any set of instructions that tells the hardware what to do. It is what guides the hardware and tells it
     how to accomplish each task. Some examples of software include web browsers, games, and word processors.
      Microsoft PowerPoint,is an example which is used to create presentations.</string>
    <string name="Intro5">Everything you do on your computer will rely on both hardware and software. For example, right now you may be viewing
        this lesson in a web browser (software) and using your mouse (hardware) to click from page to page. As you learn about different types of
        computers, ask yourself about the differences in their hardware. As you progress through this tutorial, you\'ll see that different types
        of computers also often use different types of software.</string>
    <string name="Intro6">What are the different types of computers?</string>
    <string name="Intro7">1)Desktop computers</string>
    <string name="Intro8">2)Laptop computers</string>
    <string name="Intro9">3)Tablet computers</string>
    <string name="Intro10">4)Servers computers</string>
    <string name="Intro11">A server is a computer that serves up information to other computers on a network.
        Many businesses have file servers employees can use to store and share files. A server can look like a
        regular desktop computer, or it can be much larger</string>
    <string name="Hardware1">Inside a computer</string>
    <string name="Hardware2">Have you ever looked inside a computer case before, or seen pictures of the inside of one?
        The small parts may look complicated, but the inside of a computer case really isn\'t all that mysterious.
        This lesson will help you master some of the basic terminology and understand a bit more about what goes on inside a
        computer casing.</string>
    <string name="Hardware3">CPU/processor</string>
    <string name="Hardware4">The central processing unit (CPU), also called a processor, is located inside the computer
        case on the motherboard. It is sometimes called the brain of the computer, and its job is to carry out commands.
        Whenever you press a key, click the mouse, or start an application, you\'re sending instructions to the CPU.</string>
    <string name="Hardware5">Motherboard</string>
    <string name="Hardware6">The motherboard is the computer\'s main circuit board. It\'s a thin plate that holds the CPU,
        memory, connectors for the hard drive and optical drives, expansion cards to control the video and audio, and connections
        to your computer\'s ports (such as USB ports). The motherboard connects directly or indirectly to every part of the computer.</string>
    <string name="Hardware7">RAM (random access memory)</string>
    <string name="Hardware8">RAM is your system\'s short-term memory. Whenever your computer performs calculations,
    it temporarily stores the data in the RAM until it is needed.</string>
    <string name="Hardware9">Hard drive</string>
    <string name="Hardware10">Hard drive on your computer is where the software is installed, and it\'s also where your
        documents and other files are stored. The hard drive is long-term storage, which means the data is still saved even
        if you turn the computer off or unplug it.</string>
    <string name="OS1">What is an operating system?</string>
    <string name="OS2">An operating system is the most important software that runs on a computer.
        It manages the computer\'s memory, processes, and all of its software and hardware. It also allows you
        to communicate with the computer without knowing how to speak the computer\'s language. Without an operating system,
        a computer is useless.</string>
    <string name="OS3">Types of operating systems</string>
    <string name="OS4">The three most common operating systems for personal computers are--</string>
    <string name="OS5">1)Microsoft Windows</string>
    <string name="OS6">2)Apple Mac OS X</string>
    <string name="OS7">3)Linux</string>
    <string name="OS8">Operating systems for mobile devices</string>
    <string name="OS9">The operating systems we\'ve been talking about were designed to run on desktop or laptop computers.
    Mobile devices such as phones, tablet computers, and MP3 players are different from desktop and laptop computers,
    so they run operating systems that are designed specifically for mobile devices. Examples of mobile operating systems
    include Apple iOS, Windows Phone, and Google Android. </string>

    <string name="CC1">What is the cloud?</string>
    <string name="CC2">You may have heard people using terms like the cloud, cloud computing, or cloud storage.
        But what exactly is the cloud? Basically, the cloud is the Internet—more specifically, it\'s all of the things you
        can access remotely over the Internet. When something is in the cloud, it means it is stored on servers on the Internet
        instead of on your computer. It lets you access your calendar, email, files, and more from any computer that has an Internet
        connection.</string>
    <string name="CC3">Why use the cloud?</string>
    <string name="CC4">There are many reasons to use the cloud, but the main reasons are convenience and reliability.
        Saving a file to the cloud ensures that you\'ll be able to access it with any computer that has an Internet connection,
        so you won\'t need to worry about using CD-ROMs or USB flash drives. The cloud also makes it much easier to share a file
        with coworkers and friends.</string>
    <string name="CC5">What is a web app?</string>
    <string name="CC6">Previously, we talked about how desktop applications allow you to perform tasks on your computer.
        However, there are also web applications—or web apps—which run in the cloud and do not need to be installed on your
        computer. These are sometimes called cloud apps.</string>
    <string name="CC7">Examples of web apps are--</string>
    <string name="CC8">1)Gmail</string>
    <string name="CC9">2)Yahoo! Mail</string>
    <string name="CC10">3)Facebook</string>
    <string name="CC11">4)Google Docs</string>


    <string name="and">What is Android?</string>
    <string name="and2">Android is a mobile operating system (OS) based on the Linux kernel and currently developed by Google.
        With a user interface based on direct manipulation, Android is designed primarily for touchscreen mobile devices such as
        smartphones and tablet computers, with specialized user interfaces for televisions (Android TV), cars (Android Auto),
        and wrist watches (Android Wear). </string>
    <string name="and3">Features of Android are--</string>
    <string name="and4">1)Messaging</string>
    <string name="and5">2)Web browser</string>
    <string name="and6">3)Multi-touch</string>
    <string name="and7">4)Video calling</string>
    <string name="and8">5)Bluetooth</string>
    <string name="and9">Latest Android Versions are--</string>
    <string name="and10">Ice Cream Sandwich (4.0–4.0.4)</string>
<string name="and11">Jelly Bean (4.1–4.3.1)</string>
    <string name="and12">KitKat (4.4–4.4.4, 4.4W–4.4W.2)</string>
    <string name="and13">Lollipop (5.0–5.0.2)</string>

    <string name="Int">What is Internet?</string>
    <string name="Int2">The Internet is a global system of interconnected computer networks that use the standard Internet
        protocol suite (TCP/IP) to link several billion devices worldwide. It is a network of networks that consists of
        millions of private, public, academic, business, and government networks of local to global scope, linked by a broad
        array of electronic, wireless, and optical networking technologies. </string>
    <string name="Int3">World Wide Web</string>
    <string name="Int4">The World Wide Web (WWW, W3) is an information system of interlinked hypertext documents that
        are accessed via the Internet. It has also commonly become known simply as the Web. Individual document pages on
        the World Wide Web are called web pages and are accessed with a software application running on the user\'s computer,
        commonly called a web browser. Web pages may contain text, images, videos, and other multimedia components, as well as
        web navigation features consisting of hyperlinks.</string>
    <string name="Int5">Many hostnames used for the World Wide Web begin with www because of the long-standing practice of
        naming Internet hosts according to the services they provide. The hostname of a web server is often www, in the same
        way that it may be ftp for an FTP server, and news or nntp for a USENET news server. These host names appear as Domain
        Name System (DNS) or subdomain names, as in www.example.com. </string>




    <string name="title_activity_page2">page2</string>
    <string name="title_activity_page3">page3</string>
    <string name="title_activity_page4">page4</string>
    <string name="title_activity_page5">page5</string>
    <string name="title_activity_page6">page6</string>
    <string name="title_activity_page7">page7</string>

</resources>
